COMPOSITE_ETH_VD 전략 개선 + CompositeStrategy ADX 필터 추가
- COMPOSITE_ETH_VD: OB(0.3) → RSI(0.2)+EMA(0.1) 가중치 재편, EMA+ADX 필터 활성화
  - RSI 브레이크 역할: 과매수(>70) 구간에서 ATR BUY와 상충 → HOLD (가짜 돌파 방지)
  - EMA 방향 필터: 추세 역행 신호 억제 (하락추세 BUY / 상승추세 SELL 차단)
  - ADX 횡보장 필터: ADX(14) < 20이면 하위 전략 평가 없이 즉시 HOLD
- CompositeStrategy: adxFilterEnabled 필드 추가, 생성자 방어 코드(빈 전략/가중치 0 검증)
- RegimeAdaptiveStrategy: ADX 게이트 최소 캔들 수 체크 추가 (캔들 부족 시 게이트 스킵)
- StrategyRegistry: LinkedHashMap → ConcurrentHashMap (멀티스레드 동시 접근 안전)
- MarketRegimeDetector: closes() 스트림으로 간소화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>