@@ -8,7 +8,6 @@ import com.cryptoautotrader.strategy.StrategySignal;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Weighted Voting 기반 복합 전략.
@@ -27,12 +26,16 @@ import java.util.stream.Collectors;
  */
 public class CompositeStrategy implements Strategy {
 
-    private static final double STRONG_THRESHOLD  = 0.6;
-    private static final double WEAK_THRESHOLD    = 0.4;
+    private static final double STRONG_THRESHOLD = 0.6;
+    private static final double WEAK_THRESHOLD   = 0.4;
 
     /** EMA 방향 필터 기본 파라미터 */
     private static final int DEFAULT_EMA_SHORT = 20;
     private static final int DEFAULT_EMA_LONG  = 50;
+
+    /** ADX 횡보장 필터 기본 파라미터 */
+    private static final int    DEFAULT_ADX_PERIOD    = 14;
+    private static final double DEFAULT_ADX_THRESHOLD = 20.0;
 
     private final String name;
     private final List<WeightedStrategy> strategies;
@@ -45,22 +48,43 @@ public class CompositeStrategy implements Strategy {
      */
     private final boolean emaFilterEnabled;
 
-    /** 기본 COMPOSITE 전략 (EMA 필터 미적용) */
+    /**
+     * ADX 횡보장 필터 활성화 여부.
+     * true이면 ADX(14) < 20 구간에서 하위 전략 평가 없이 즉시 HOLD를 반환한다.
+     * 추세가 없는 횡보장에서 ATR 기반 가짜 돌파 신호를 사전 차단한다.
+     */
+    private final boolean adxFilterEnabled;
+
+    /** 기본 COMPOSITE 전략 (EMA 필터, ADX 필터 미적용) */
     public CompositeStrategy(List<WeightedStrategy> strategies) {
         this("COMPOSITE", strategies);
     }
 
-    /** 이름을 명시적으로 지정하는 프리셋 복합 전략 (EMA 필터 미적용) */
+    /** 이름을 명시적으로 지정하는 프리셋 복합 전략 (EMA 필터, ADX 필터 미적용) */
     public CompositeStrategy(String name, List<WeightedStrategy> strategies) {
-        this(name, strategies, false);
+        this(name, strategies, false, false);
     }
 
-    /** EMA 방향 필터 활성화 여부를 명시하는 생성자 */
+    /** EMA 방향 필터 활성화 여부를 명시하는 생성자 (ADX 필터 미적용) */
     public CompositeStrategy(String name, List<WeightedStrategy> strategies, boolean emaFilterEnabled) {
+        this(name, strategies, emaFilterEnabled, false);
+    }
+
+    /** EMA 방향 필터 + ADX 횡보장 필터 활성화 여부를 모두 명시하는 생성자 */
+    public CompositeStrategy(String name, List<WeightedStrategy> strategies,
+                             boolean emaFilterEnabled, boolean adxFilterEnabled) {
+        if (strategies == null || strategies.isEmpty()) {
+            throw new IllegalArgumentException("전략 목록이 비어 있습니다.");
+        }
+        double sum = strategies.stream().mapToDouble(WeightedStrategy::getWeight).sum();
+        if (sum <= 0) {
+            throw new IllegalArgumentException("전략 가중치 합계가 0 이하입니다: " + sum);
+        }
         this.name             = name;
         this.strategies       = strategies;
-        this.totalWeight      = strategies.stream().mapToDouble(WeightedStrategy::getWeight).sum();
+        this.totalWeight      = sum;
         this.emaFilterEnabled = emaFilterEnabled;
+        this.adxFilterEnabled = adxFilterEnabled;
     }
 
     @Override
@@ -74,12 +98,29 @@ public class CompositeStrategy implements Strategy {
                 .mapToInt(ws -> ws.getStrategy().getMinimumCandleCount())
                 .max()
                 .orElse(0);
-        // EMA 필터가 활성화된 경우 장기 EMA 계산에 필요한 최소 캔들 수 보장
-        return emaFilterEnabled ? Math.max(strategyMin, DEFAULT_EMA_LONG) : strategyMin;
+        // EMA 필터: 장기 EMA(50) 계산에 필요한 최소 캔들 수 보장
+        if (emaFilterEnabled) {
+            strategyMin = Math.max(strategyMin, DEFAULT_EMA_LONG);
+        }
+        // ADX 필터: ADX(14) 계산에 period*2+1 = 29개 캔들 필요
+        if (adxFilterEnabled) {
+            strategyMin = Math.max(strategyMin, DEFAULT_ADX_PERIOD * 2 + 1);
+        }
+        return strategyMin;
     }
 
     @Override
     public StrategySignal evaluate(List<Candle> candles, Map<String, Object> params) {
+        // ADX 횡보장 필터: 추세 없는 구간에서 하위 전략 평가 전 즉시 HOLD 반환
+        if (adxFilterEnabled && candles.size() >= DEFAULT_ADX_PERIOD * 2 + 1) {
+            BigDecimal adx = IndicatorUtils.adx(candles, DEFAULT_ADX_PERIOD);
+            if (adx.doubleValue() < DEFAULT_ADX_THRESHOLD) {
+                return StrategySignal.hold(String.format(
+                        "ADX필터 횡보장 차단: ADX(%.1f) < %.0f (추세 없음)",
+                        adx.doubleValue(), DEFAULT_ADX_THRESHOLD));
+            }
+        }
+
         double buyScore  = 0.0;
         double sellScore = 0.0;
         StringBuilder reasons = new StringBuilder();
@@ -103,12 +144,10 @@ public class CompositeStrategy implements Strategy {
         String detail = reasons.toString().trim();
 
         // 가중치 합계로 정규화 (총합이 1.0 초과 시 임계값 왜곡 방지)
-        if (totalWeight > 0) {
-            buyScore  /= totalWeight;
-            sellScore /= totalWeight;
-        }
+        buyScore  /= totalWeight;
+        sellScore /= totalWeight;
 
-        return applyEmaFilter(candles, finalSignal(buyScore, sellScore, detail), detail);
+        return applyEmaFilter(candles, finalSignal(buyScore, sellScore, detail));
     }
 
     private StrategySignal finalSignal(double buyScore, double sellScore, String detail) {
@@ -142,18 +181,15 @@ public class CompositeStrategy implements Strategy {
      * - 하락 추세(EMA20 < EMA50): BUY 신호 억제
      * emaFilterEnabled=false 또는 캔들 부족 시 원본 신호 그대로 반환.
      */
-    private StrategySignal applyEmaFilter(List<Candle> candles, StrategySignal signal,
-                                          String detail) {
-        if (!emaFilterEnabled || candles.size() < DEFAULT_EMA_LONG) {
-            return signal;
-        }
-        if (signal.getAction() == StrategySignal.Action.HOLD) {
+    private StrategySignal applyEmaFilter(List<Candle> candles, StrategySignal signal) {
+        if (!emaFilterEnabled || candles.size() < DEFAULT_EMA_LONG
+                || signal.getAction() == StrategySignal.Action.HOLD) {
             return signal;
         }
 
         List<BigDecimal> closes = candles.stream()
                 .map(Candle::getClose)
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal emaShort = IndicatorUtils.ema(closes, DEFAULT_EMA_SHORT);
         BigDecimal emaLong  = IndicatorUtils.ema(closes, DEFAULT_EMA_LONG);
@@ -163,13 +199,13 @@ public class CompositeStrategy implements Strategy {
             return StrategySignal.hold(String.format(
                     "EMA필터 SELL억제 (EMA%d=%.0f > EMA%d=%.0f 상승추세) [%s]",
                     DEFAULT_EMA_SHORT, emaShort.doubleValue(),
-                    DEFAULT_EMA_LONG,  emaLong.doubleValue(), detail));
+                    DEFAULT_EMA_LONG,  emaLong.doubleValue(), signal.getReason()));
         }
         if (!uptrend && signal.getAction() == StrategySignal.Action.BUY) {
             return StrategySignal.hold(String.format(
                     "EMA필터 BUY억제 (EMA%d=%.0f < EMA%d=%.0f 하락추세) [%s]",
                     DEFAULT_EMA_SHORT, emaShort.doubleValue(),
-                    DEFAULT_EMA_LONG,  emaLong.doubleValue(), detail));
+                    DEFAULT_EMA_LONG,  emaLong.doubleValue(), signal.getReason()));
         }
         return signal;
     }
